testdata/scenarios/01_6-matchers/k8s/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: kgateway-system
  hostnames:
    - "api.example.com"
  rules:
  - matches:
    - method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          # No path matcher, so rewrite any GET request path to httpbin's /get endpoint
          replaceFullPath: /get
    backendRefs:
    - name: httpbin
      namespace: httpbin
      port: 8000
