testdata/scenarios/01_6-matchers/k8s/httproute-kgateway-system_service-httpbin-rg.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: httproute-kgateway-system-service-httpbin
  namespace: httpbin
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kgateway-system
  to:
    - group: ""
      kind: Service
